# meeting-room-booking

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 39da7468c329_add_slots_and_bookings_tables.py  6e1abf9c77f4_init.py
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  bookings.py  rooms.py
backend/app/models/: __init__.py  booking.py  room.py  slot.py  user.py
backend/app/schemas/: booking.py  room.py
backend/app/services/: auth.py  booking.py  room.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: BookingPage.css  BookingPage.tsx  LoginPage.css  LoginPage.tsx
frontend/src/types/: booking.ts
