[project]
name = "backend"
version = "0.1.0"
description = "Meeting room booking service"
authors = [
    {name = "DanilShtefan",email = "danilshtefan.66@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
